--- a/chap3-SBN_Program.tex
+++ b/chap3-SBN_Program.tex
@@ -1,2 +1,13 @@
 \chapter{SBN Program}
 \label{chap:SBN Program}
+Results from LSND, MiniBooNE etc. at odds with null results from e.g. KARMEN and MINOS.. Need a definitive test.
+
+Good stepping stone for DUNE - similar design (LArTPC)
+
+
+\section{SBN Program Overview}
+\section{Liquid Argon Time Projection Chambers}
+\section{Booster Neutrino Beam}
+\section{SBND}
+\section{MicroBooNE}
+\section{ICARUS}
