--- a/chap4-Energy_Reco.tex
+++ b/chap4-Energy_Reco.tex
@@ -4,7 +4,19 @@
 \section{Pandora/Larsoft Overview?}
 
 Use vertex sample - make life easier for Pandora.
-Don't really have a 3D trajectory for showers (can't get dE/dx) unlike for tracks.
+
+\begin{itemize}
+    \item Current induced on wires.
+    \item Extract signal from noise and e-field etc.
+    \item some more stuff
+    \item Pandora patter recognition clusters the reconstructed hits.
+    \item Initially 2d clusters are made. Clusters are then matched between planes to produce 3d clusters
+\end{itemize}
+
+Patter recognition classifies particles as either track-like or shower-like. Naturally, the shower reconstruction tools are only run on the shower-like particles.
+
+
+
 
 \section{Motivation for improving the shower energy reconstruction}
 Important for the selections. 
