--- a/glossary.tex
+++ b/glossary.tex
@@ -16,4 +16,17 @@
 \newacronym{tpc}{TPC}{Time Projection Chamber}
 \newacronym{cpa}{CPA}{Cathode Plane Assembly}
 \newacronym{apa}{APA}{Andode Plane Assembly}
+\newacronym{pmt}{PMT}{Photo Multiplier Tube}
+\newacronym{donut}{DONUT}{Direct Observation of the Nu Tau}
+\newacronym{fermilab}{Fermilab}{Fermi National Accelerator Laboratory}
+\newacronym{sm}{SM}{Standard Model}
+\newacronym{sk}{SK}{Super Kamiokande}
+\newacronym{sno}{SNO}{Sudbury Neutrino Observatory}
+\newacronym{cc}{CC}{Charged Current}
+\newacronym{nc}{NC}{Neutral Current}
+\newacronym{es}{ES}{Elastic Scattering}
+\newacronym{pmns}{PMNS}{Pontecorvo-Maki-Nakagawa-Sakata}
+\newacronym{cp}{CP}{Charge-Parity}
+\newacronym{pdg}{PDG}{Particle Data Group}
+
 
