--- a/mythesis.bib
+++ b/mythesis.bib
@@ -29,6 +29,295 @@
 }
 
 
+@article{PDG_2020,
+    author = "Zyla, P.A. and others",
+    collaboration = "Particle Data Group",
+    title = "{Review of Particle Physics}",
+    doi = "10.1093/ptep/ptaa104",
+    journal = "PTEP",
+    volume = "2020",
+    number = "8",
+    pages = "083C01",
+    year = "2020"
+}
+
+
+% chap2 - neutrino theory
+@misc{Pauli_letter,
+      author        = "Pauli, Wolfgang",
+      title         = "{Pauli letter collection: letter to Lise Meitner}",
+      howpublished  = "https://cds.cern.ch/record/83282",
+      note          = "Typed copy, [Accessed September 2021]",
+}
+
+@ARTICLE{cowan_and_reines_paper,
+   author = {{Cowan}, Jr., C.~L. and {Reines}, F. and {Harrison}, F.~B. and 
+	{Kruse}, H.~W. and {McGuire}, A.~D.},
+    title = "{Detection of the Free Neutrino: A Confirmation}",
+  journal = {Science},
+     year = 1956,
+    month = jul,
+   volume = 124,
+    pages = {103-104},
+      doi = {10.1126/science.124.3212.103},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/1956Sci...124..103C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Muon_neutrino_discovery,
+   author = {{Danby}, G. and {Gaillard}, J.-M. and {Goulianos}, K. and {Lederman}, L.~M. and 
+	{Mistry}, N. and {Schwartz}, M. and {Steinberger}, J.},
+    title = "{Observation of High-Energy Neutrino Reactions and the Existence of Two Kinds of Neutrinos}",
+  journal = {Physical Review Letters},
+     year = 1962,
+    month = jul,
+   volume = 9,
+    pages = {36-44},
+      doi = {10.1103/PhysRevLett.9.36},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/1962PhRvL...9...36D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{DONUT,
+      author         = "Kodama, K. and others",
+      title          = "{Observation of tau neutrino interactions}",
+      collaboration  = "DONUT",
+      journal        = "Phys. Lett.",
+      volume         = "B504",
+      year           = "2001",
+      pages          = "218-224",
+      doi            = "10.1016/S0370-2693(01)00307-0",
+      eprint         = "hep-ex/0012035",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "FERMILAB-PUB-00-335-E",
+      SLACcitation   = "%%CITATION = HEP-EX/0012035;%%"
+}
+
+@article{Homestake,
+      author         = "Lande, K. and Cleveland, B. T. and Daily, T. and Davis,
+                        R. and Distel, J. and Lee, C. K. and Weinberger, A. and
+                        Wildenhain, P. and Ullman, J.",
+      title          = "{Results from the Homestake solar neutrino observatory}",
+      booktitle      = "{High-energy physics. Proceedings, 25th International
+                        Conference, Singapore, August 2-8, 1990. Vol. I+II}",
+      journal        = "Conf. Proc.",
+      volume         = "C900802",
+      year           = "1990",
+      pages          = "867-675",
+      note           = "[Conf. Proc.C900802V1,C900802V1:667(1990)]",
+      SLACcitation   = "%%CITATION = CONFP,C900802,867;%%"
+}
+
+@article{SuperK_neutrino_oscillations,
+   title={Evidence for Oscillation of Atmospheric Neutrinos},
+   volume={81},
+   ISSN={1079-7114},
+   url={http://dx.doi.org/10.1103/PhysRevLett.81.1562},
+   DOI={10.1103/physrevlett.81.1562},
+   number={8},
+   journal={Physical Review Letters},
+   publisher={American Physical Society (APS)},
+   author={Fukuda, Y. and Hayakawa, T. and Ichihara, E. and Inoue, K. and Ishihara, K. and Ishino, H. and Itow, Y. and Kajita, T. and Kameda, J. and Kasuga, S. and et al.},
+   year={1998},
+   month={Aug},
+   pages={1562–1567}
+}
+
+@article{SNO_solar_neutrinos,
+  title = {Measurement of the Rate of ${\ensuremath{\nu}}_{e}+\mathit{d}\ensuremath{\rightarrow}\mathit{p}+\mathit{p}+{\mathit{e}}^{\ensuremath{-}}$ Interactions Produced by $^{8}B$ Solar Neutrinos at the Sudbury Neutrino Observatory},
+  author = {Ahmad, Q. R. and others},
+  collaboration = {SNO Collaboration},
+  journal = {Phys. Rev. Lett.},
+  volume = {87},
+  issue = {7},
+  pages = {071301},
+  numpages = {6},
+  year = {2001},
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.87.071301},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.87.071301}
+}
+
+@article{tau_lepton_discovery,
+  title = {Evidence for Anomalous Lepton Production in ${e}^{+}\ensuremath{-}{e}^{\ensuremath{-}}$ Annihilation},
+  author = {Perl, M. L. and Abrams, G. S. and Boyarski, A. M. and Breidenbach, M. and Briggs, D. D. and Bulos, F. and Chinowsky, W. and Dakin, J. T. and Feldman, G. J. and Friedberg, C. E. and Fryberger, D. and Goldhaber, G. and Hanson, G. and Heile, F. B. and Jean-Marie, B. and Kadyk, J. A. and Larsen, R. R. and Litke, A. M. and L\"uke, D. and Lulu, B. A. and L\"uth, V. and Lyon, D. and Morehouse, C. C. and Paterson, J. M. and Pierre, F. M. and Pun, T. P. and Rapidis, P. A. and Richter, B. and Sadoulet, B. and Schwitters, R. F. and Tanenbaum, W. and Trilling, G. H. and Vannucci, F. and Whitaker, J. S. and Winkelmann, F. C. and Wiss, J. E.},
+  journal = {Phys. Rev. Lett.},
+  volume = {35},
+  issue = {22},
+  pages = {1489--1492},
+  numpages = {0},
+  year = {1975},
+  month = {Dec},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.35.1489},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.35.1489}
+}
+
+@article{Zboson_number_of_neutrinos,
+      author        = "Blondel, Alain",
+      title         = "{The Number of Neutrinos and the Z Line Shape}",
+      year          = "2016",
+      url           = "https://cds.cern.ch/record/2217139",
+      doi           = "$10.1142/9789814733519\_0008$",
+}
+
+@article{LSND_excess,
+  title = {Evidence for neutrino oscillations from the observation of ${\overline{\ensuremath{\nu}}}_{e}$ appearance in a ${\overline{\ensuremath{\nu}}}_{\ensuremath{\mu}}$ beam},
+  author = {Aguilar, A. and Auerbach, L. B. and Burman, R. L. and Caldwell, D. O. and Church, E. D. and Cochran, A. K. and Donahue, J. B. and Fazely, A. and Garvey, G. T. and Gunasingha, R. M. and Imlay, R. and Louis, W. C. and Majkic, R. and Malik, A. and Metcalf, W. and Mills, G. B. and Sandberg, V. and Smith, D. and Stancu, I. and Sung, M. and Tayloe, R. and VanDalen, G. J. and Vernon, W. and Wadia, N. and White, D. H. and Yellin, S.},
+  collaboration = {LSND Collaboration},
+  journal = {Phys. Rev. D},
+  volume = {64},
+  issue = {11},
+  pages = {112007},
+  numpages = {22},
+  year = {2001},
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.64.112007},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.64.112007}
+}
+
+@article{MiniBooNE_excess,
+  title = {Search for Electron Neutrino Appearance at the $\ensuremath{\Delta}{m}^{2}\ensuremath{\sim}1\text{ }\text{ }{\mathrm{eV}}^{2}$ Scale},
+  author = {Aguilar-Arevalo, A. A. and Bazarko, A. O. and Brice, S. J. and Brown, B. C. and Bugel, L. and Cao, J. and Coney, L. and Conrad, J. M. and Cox, D. C. and Curioni, A. and Djurcic, Z. and Finley, D. A. and Fleming, B. T. and Ford, R. and Garcia, F. G. and Garvey, G. T. and Green, C. and Green, J. A. and Hart, T. L. and Hawker, E. and Imlay, R. and Johnson, R. A. and Kasper, P. and Katori, T. and Kobilarcik, T. and Kourbanis, I. and Koutsoliotas, S. and Laird, E. M. and Link, J. M. and Liu, Y. and Liu, Y. and Louis, W. C. and Mahn, K. B. M. and Marsh, W. and Martin, P. S. and McGregor, G. and Metcalf, W. and Meyers, P. D. and Mills, F. and Mills, G. B. and Monroe, J. and Moore, C. D. and Nelson, R. H. and Nienaber, P. and Ouedraogo, S. and Patterson, R. B. and Perevalov, D. and Polly, C. C. and Prebys, E. and Raaf, J. L. and Ray, H. and Roe, B. P. and Russell, A. D. and Sandberg, V. and Schirato, R. and Schmitz, D. and Shaevitz, M. H. and Shoemaker, F. C. and Smith, D. and Sorel, M. and Spentzouris, P. and Stancu, I. and Stefanski, R. J. and Sung, M. and Tanaka, H. A. and Tayloe, R. and Tzanov, M. and Van de Water, R. and Wascko, M. O. and White, D. H. and Wilking, M. J. and Yang, H. J. and Zeller, G. P. and Zimmerman, E. D.},
+  collaboration = {MiniBooNE Collaboration},
+  journal = {Phys. Rev. Lett.},
+  volume = {98},
+  issue = {23},
+  pages = {231801},
+  numpages = {7},
+  year = {2007},
+  month = {Jun},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.98.231801},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.98.231801}
+}
+
+@article{GALLEX,
+    author = "Hampel, W. and others",
+    collaboration = "GALLEX",
+    title = "{Final results of the Cr-51 neutrino source experiments in GALLEX}",
+    reportNumber = "DAPNIA-SPP-97-26, MPI-H-V41-1997, BNL-64864, ROM2F-97-45, TUM-SFB-375-221",
+    doi = "10.1016/S0370-2693(97)01562-1",
+    journal = "Phys. Lett. B",
+    volume = "420",
+    pages = "114--126",
+    year = "1998"
+}
+
+@article{Gallex_reanalysis,
+title = "{Reanalysis of the Gallex solar neutrino flux and source experiments}",
+journal = {Physics Letters B},
+volume = {685},
+number = {1},
+pages = {47-54},
+year = {2010},
+issn = {0370-2693},
+doi = {https://doi.org/10.1016/j.physletb.2010.01.030},
+url = {https://www.sciencedirect.com/science/article/pii/S0370269310000729},
+author = {F. Kaether and W. Hampel and G. Heusser and J. Kiko and T. Kirsten},
+keywords = {Solar neutrinos, Gallium experiment, , Neutrino mass},
+abstract = {After the completion of the gallium solar neutrino experiments at the Laboratori Nazionali del Gran Sasso (Gallex: 1991–1997; GNO: 1998–2003) we have retrospectively updated the Gallex results with the help of new technical data that were impossible to acquire for principle reasons before the completion of the low rate measurement phase (that is, before the end of the GNO solar runs). Subsequent high rate experiments have allowed the calibration of absolute internal counter efficiencies and of an advanced pulse shape analysis for counter background discrimination. The updated overall result for Gallex (only) is 73.4−7.3+7.1 SNU. This is 5.3% below the old value of 77.5−7.8+7.5 SNU (Gallex Collaboration, W. Hampel et al., 1999 [1]), with a substantially reduced error. A similar reduction is obtained from the reanalysis of the 51Cr neutrino source experiments of 1994/1995.}
+}
+
+@article{SAGE,
+  title = "{Measurement of the response of a Ga solar neutrino experiment to neutrinos from a $^{37}\mathrm{Ar}$ source}",
+  author = {Abdurashitov, J. N. and Gavrin, V. N. and Girin, S. V. and Gorbachev, V. V. and Gurkina, P. P. and Ibragimova, T. V. and Kalikhov, A. V. and Khairnasov, N. G. and Knodel, T. V. and Matveev, V. A. and Mirmov, I. N. and Shikhin, A. A. and Veretenkin, E. P. and Vermul, V. M. and Yants, V. E. and Zatsepin, G. T. and Bowles, T. J. and Elliott, S. R. and Teasdale, W. A. and Cleveland, B. T. and Haxton, W. C. and Wilkerson, J. F. and Nico, J. S. and Suzuki, A. and Lande, K. and Khomyakov, Yu. S. and Poplavsky, V. M. and Popov, V. V. and Mishin, O. V. and Petrov, A. N. and Vasiliev, B. A. and Voronov, S. A. and Karpenko, A. I. and Maltsev, V. V. and Oshkanov, N. N. and Tuchkov, A. M. and Barsanov, V. I. and Janelidze, A. A. and Korenkova, A. V. and Kotelnikov, N. A. and Markov, S. Yu. and Selin, V. V. and Shakirov, Z. N. and Zamyatina, A. A. and Zlokazov, S. B.},
+  journal = {Phys. Rev. C},
+  volume = {73},
+  issue = {4},
+  pages = {045805},
+  numpages = {12},
+  year = {2006},
+  month = {Apr},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevC.73.045805},
+  url = {https://link.aps.org/doi/10.1103/PhysRevC.73.045805}
+}
+
+@article{Reactor_anomaly,
+   title={Reactor antineutrino anomaly},
+   volume={83},
+   ISSN={1550-2368},
+   url={http://dx.doi.org/10.1103/PhysRevD.83.073006},
+   DOI={10.1103/physrevd.83.073006},
+   number={7},
+   journal={Physical Review D},
+   publisher={American Physical Society (APS)},
+   author={Mention, G. and Fechner, M. and Lasserre, Th. and Mueller, Th. A. and Lhuillier, D. and Cribier, M. and Letourneau, A.},
+   year={2011},
+   month={Apr}
+}
+
+@Inbook{Majorana2020,
+author="Majorana, Ettore",
+editor="Cifarelli, Luisa",
+title="A Symmetric Theory of Electrons and Positrons",
+bookTitle="Scientific Papers of Ettore Majorana: A New Expanded Edition",
+year="2020",
+publisher="Springer International Publishing",
+address="Cham",
+pages="113--128",
+abstract="It is shown that it is possible to achieve complete formal symmetrization in the electron and proton quantum theory by means of a new quantization process. The meaning of Dirac equations is somewhat modified and there is no longer any reason to speak of negative-energy states nor to assume, for any other types of particles, especially neutral ones, the existence of antiparticles, corresponding to the ``holes'' of negative energy.",
+isbn="978-3-030-23509-3",
+doi="10.1007/978-3-030-23509-3_11",
+url="https://doi.org/10.1007/978-3-030-23509-3_11"
+}
+
+@article{Double_beta_decay,
+  title = {On Transition Probabilities in Double Beta-Disintegration},
+  author = {Furry, W. H.},
+  journal = {Phys. Rev.},
+  volume = {56},
+  issue = {12},
+  pages = {1184--1193},
+  numpages = {0},
+  year = {1939},
+  month = {Dec},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRev.56.1184},
+  url = {https://link.aps.org/doi/10.1103/PhysRev.56.1184}
+}
+
+@article{Pontecorvo,
+    author = "Pontecorvo, B.",
+    title = "{Neutrino Experiments and the Problem of Conservation of Leptonic Charge}",
+    journal = "Zh. Eksp. Teor. Fiz.",
+    volume = "53",
+    pages = "1717--1725",
+    year = "1967"
+}
+
+@article{MNS_oscillations,
+    author = {Maki, Ziro and Nakagawa, Masami and Sakata, Shoichi},
+    title = "{Remarks on the Unified Model of Elementary Particles}",
+    journal = {Progress of Theoretical Physics},
+    volume = {28},
+    number = {5},
+    pages = {870-880},
+    year = {1962},
+    month = {11},
+    abstract = "{A particle mixture theory of neutrino is proposed assuming the existence of two kinds of neutrinos. Based on the neutrino-mixture theory, a possible unified model of elementary particles is constructed by generalizing the Sakata-Nagoya model. Our scheme gives a natural explanation of smallness of leptonic decay rate of hyperons as well as the subtle difference of Gν's between µ-e and β-decay.Starting with this scheme, the possibility of Ke3 mode with ΔS/ΔQ = −1 is also examined, and some bearings on the dynamical role of the B-matter, a fundamental constituent of baryons in the Nagoya model, are clarified.}",
+    issn = {0033-068X},
+    doi = {10.1143/PTP.28.870},
+    url = {https://doi.org/10.1143/PTP.28.870},
+    eprint = {https://academic.oup.com/ptp/article-pdf/28/5/870/5258750/28-5-870.pdf},
+}
+
+@article{Atmospheric_anomaly,
+    author = "Learned, John G.",
+    editor = "Caldwell, David O.",
+    collaboration = "Super-Kamiokande",
+    title = "{The Atmospheric neutrino anomaly: Muon neutrino disappearance}",
+    eprint = "hep-ex/0007056",
+    archivePrefix = "arXiv",
+    pages = "89--130",
+    month = "7",
+    year = "2000"
+}
+
 % Shower reco stuff
 @article{ArgoNeuT_ESTAR_paper,
   title = "{Demonstration of MeV-scale physics in liquid argon time projection chambers using ArgoNeuT}",
