--- a/preamble.tex
+++ b/preamble.tex
@@ -3,7 +3,9 @@
 \usepackage{morefloats,subfig,afterpage}
 \usepackage{mathrsfs} % script font
 \usepackage{verbatim}
-\usepackage{float}
+\usepackage{multirow}
+\usepackage{nicematrix}
+\usepackage{feynmf} % feynman diagrams
 
 % glossary - add to toc and remove page numbers
 \usepackage[xindy,toc,nonumberlist]{glossaries} 
